adicionada paginação